# serializer version: 1
# name: test_devices_insertion_ok
  list([
    'cover.test_shutter_0_test_serial_sh_0',
    'cover.test_shutter_1_test_serial_sh_1',
  ])
# ---
# name: test_devices_insertion_ok.1
  list([
    'cover.test_shutter_0_test_serial_sh_0',
    'cover.test_shutter_1_test_serial_sh_1',
    'cover.test_shutter_2_test_serial_sh_2',
  ])
# ---
